# chrono-wallpaper

./: CLAUDE.md  README.md  pyproject.toml
src/chrono_wallpaper/: __init__.py
src/chrono_wallpaper/cli/: main.py
src/chrono_wallpaper/config/: schema.py
src/chrono_wallpaper/core/: __init__.py  blender.py  compositor.py  scheduler.py
systemd/: chrono-wallpaper.service  chrono-wallpaper.timer  install.sh
tests/: test_blender.py  test_scheduler.py
